# cargo-depcheck

./: .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HANDOVER.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: advisories.rs  cli.rs  cratesio.rs  graph.rs  main.rs  report.rs  score.rs
