[package]
name = "cargo-depcheck"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Ranked dependency health report — security advisories, version lag, and maintenance signals weighted by graph depth"
license = "MIT OR Apache-2.0"
repository = "https://github.com/debrajrout/cargo-depcheck"
homepage = "https://github.com/debrajrout/cargo-depcheck"
documentation = "https://github.com/debrajrout/cargo-depcheck#readme"
readme = "README.md"
keywords = ["cargo", "dependencies", "security", "audit", "maintenance"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".github/", "tests/fixtures/"]

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for crates.io API
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization / deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cargo project graph parsing
cargo_metadata = "0.18"

# RustSec advisory database
rustsec = "0.33"

# Semantic version parsing and comparison
semver = "1"

# Date and time (for days-since-last-publish)
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"

# Terminal progress bar
indicatif = "0.17"

# Terminal colors
colored = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
